--- a/.pipelines/azdo-template-get-model-version.yml
+++ b/.pipelines/azdo-template-get-model-version.yml
@@ -6,7 +6,6 @@ steps:
     inlineScript: |
       set -e # fail on error
       export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-      python $(Build.SourcesDirectory)/ml_service/pipelines/verify_train_pipeline.py --build_id $(Build.BuildId) --model_name "$(MODEL_NAME)" --output_model_version_file "model_version.txt"
-      echo "##vso[task.setvariable variable=MODEL_VERSION]$(cat model_version.txt)"
+      python $(Build.SourcesDirectory)/ml_service/pipelines/verify_train_pipeline.py --build_id $(Build.BuildId)
   name: 'getversion'
   displayName: "Determine if evaluation succeeded and new model is registered"
