--- a/.pipelines/azdo-template-get-model-version.yml
+++ b/.pipelines/azdo-template-get-model-version.yml
@@ -6,6 +6,9 @@ steps:
     inlineScript: |
       set -e # fail on error
       export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-      python $(Build.SourcesDirectory)/ml_service/pipelines/verify_train_pipeline.py --build_id $(Build.BuildId)
+      python $(Build.SourcesDirectory)/ml_service/pipelines/verify_train_pipeline.py --build_id $(Build.BuildId) --output_model_version_file "model_version.txt"
+      # Output model version to Azure DevOps job
+      MODEL_VERSION="$(cat model_version.txt)"
+      echo "##vso[task.setvariable variable=MODEL_VERSION]$MODEL_VERSION"
   name: 'getversion'
   displayName: "Determine if evaluation succeeded and new model is registered"
