--- a/.pipelines/azdo-helm-install.yml
+++ b/.pipelines/azdo-helm-install.yml
@@ -3,7 +3,7 @@ steps:
   displayName: 'Install Helm $(helmVersion)'
   inputs:
     targetType: inline
-    script:  wget -q $helmDownloadURL -O /tmp/$FILENAME && tar -zxvf /tmp/$FILENAME -C /tmp && sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
+    script:  wget -q $(helmDownloadURL) -O /tmp/$FILENAME && tar -zxvf /tmp/$FILENAME -C /tmp && sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
   env:
     HELM_VERSION: $(helmVersion)
     FILENAME: helm-$(helmVersion)-linux-amd64.tar.gz
