--- a/.pipelines/azdo-release-abtest-pipeline.yml
+++ b/.pipelines/azdo-release-abtest-pipeline.yml
@@ -97,7 +97,7 @@ stages:
           steps:
           - template: azdo-helm-upgrade.yml
             parameters:
-              chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-istio'
+              chartPath: '$(Pipeline.Workspace)/allcharts/abtest-istio'
               releaseName: 'abtest-istio' 
               overrideValues: 'weight.blue=100,weight.green=0'
 
@@ -134,7 +134,7 @@ stages:
           steps:
           - template: azdo-helm-upgrade.yml
             parameters:
-              chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-istio'
+              chartPath: '$(Pipeline.Workspace)/allcharts/abtest-istio'
               releaseName: 'abtest-istio' 
               overrideValues: 'weight.blue=0,weight.green=100'
 
