--- a/.pipelines/azdo-release-abtest-pipeline.yml
+++ b/.pipelines/azdo-release-abtest-pipeline.yml
@@ -47,27 +47,31 @@ stages:
           ls -ltr
       displayName: 'Test Variable'
 
-
     - publish: image_location.txt
       artifact: image_location
 
-- stage: 'Blue_Staging'
-  jobs:
-  - job: "Deploy_to_Staging"
-    timeoutInMinutes: 0
-    steps:
-    - script: |
-        IMAGE_LOCATION="$(cat $(Pipeline.Workspace)/image_location/image_location.txt)"
-        echo $IMAGE_LOCATION
-      displayName: 'Test Variable'
-    - template: azdo-helm-upgrade.yml
-      parameters:
-        chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-model'
-        releaseName: $(blueReleaseName) 
-        overrideValues: 'deployment.name=$(blueReleaseName),deployment.bluegreen=blue,deployment.image.tag=$(imgTag),deployment.image.name=$(imgName)'
-
     - publish: $(System.DefaultWorkingDirectory)/charts
       artifact: allcharts
+
+
+- stage: 'Blue_Staging'
+  jobs:
+  - deployment: "Deploy_to_Staging"
+    timeoutInMinutes: 0
+    environment: abtestenv
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: |
+              IMAGE_LOCATION="$(cat $(Pipeline.Workspace)/image_location/image_location.txt)"
+              echo $IMAGE_LOCATION
+            displayName: 'Test Variable'
+          - template: azdo-helm-upgrade.yml
+            parameters:
+              chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-model'
+              releaseName: $(blueReleaseName) 
+              overrideValues: 'deployment.name=$(blueReleaseName),deployment.bluegreen=blue,deployment.image.tag=$(imgTag),deployment.image.name=$(imgName)'
 
 - stage: 'Blue_50'
   jobs:
