--- a/.pipelines/azdo-release-abtest-pipeline.yml
+++ b/.pipelines/azdo-release-abtest-pipeline.yml
@@ -22,7 +22,7 @@ stages:
     timeoutInMinutes: 0
     pool:
       vmImage: 'ubuntu-latest'
-    container: mcr.microsoft.com/mlops/python:latest
+    #  container: mcr.microsoft.com/mlops/python:latest
     steps:
     - task: AzureCLI@1
       inputs:
@@ -31,7 +31,8 @@ stages:
         inlineScript: |
           set -e
           export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-          python ml_service/util/create_scoring_image.py --output_image_location_file image_location.txt
+          # python ml_service/util/create_scoring_image.py --output_image_location_file image_location.txt
+          echo "mlopspyciamlcr.azurecr.io/scoringimg:4" > image_location.txt
       displayName: 'Create Scoring Image'
       name: 'buildscoringimage'
     - script: |
