--- a/.pipelines/azdo-variables.yml
+++ b/.pipelines/azdo-variables.yml
@@ -38,3 +38,5 @@ variables:
   # Optional. Used by a training pipeline with R on Databricks
 - name: DB_CLUSTER_ID
   value: ''
+- name: SCORE_SCRIPT
+  value: score.py
