--- a/.pipelines/azdo-abtest-pipeline.yml
+++ b/.pipelines/azdo-abtest-pipeline.yml
@@ -13,7 +13,7 @@ trigger:
 variables:
 - group: 'devopsforai-aml-vg'
 - name: 'helmVersion'
-  value: 'v3.0.0-rc.3'
+  value: 'v3.0.1'
 - name: 'helmDownloadURL'
   value: 'https://get.helm.sh/helm-$HELM_VERSION-linux-amd64.tar.gz'
 - name: 'blueReleaseName'
