--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -66,7 +66,8 @@ stages:
           # Generate a hyperparameter value as a random number between 0 and 1.
           # A random value is used here to make the Azure ML dashboards "interesting" when testing
           # the solution sample.
-          alpha=$(printf "0.%03d\n" $((($RANDOM*1000)/32767)))
+          # alpha=$(printf "0.%03d\n" $((($RANDOM*1000)/32767)))
+          alpha=0.5
           echo "Alpha: $alpha"
           echo "##vso[task.setvariable variable=ALPHA;isOutput=true]$alpha"
       name: 'getalpha'
