Data from managed datastore

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ MODEL_PATH = ''
 EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
 REGISTER_SCRIPT_PATH = 'register/register_model.py'
 SOURCES_DIR_TRAIN = 'code'
+DATASET_NAME = 'diabetes_ds'
+DATASTORE_NAME = 'datablobstore'
+DATAFILE_NAME = 'diabetes.csv'
 
 # Optional. Used by a training pipeline with R on Databricks
 DB_CLUSTER_ID = ''
