extending use of SOURCES_DIR_TRAIN variable

--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -115,10 +115,10 @@ stages:
         modelSourceType: manualSpec
         modelName: '$(MODEL_NAME)'
         modelVersion: $(MODEL_VERSION)
-        inferencePath: '$(Build.SourcesDirectory)/code/scoring/inference_config.yml'
+        inferencePath: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring/inference_config.yml'
         deploymentTarget: ACI
         deploymentName: $(ACI_DEPLOYMENT_NAME)
-        deployConfig: '$(Build.SourcesDirectory)/code/scoring/deployment_config_aci.yml'
+        deployConfig: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring/deployment_config_aci.yml'
         overwriteExistingDeployment: true
     - task: AzureCLI@1
       displayName: 'Smoke test'
@@ -150,11 +150,11 @@ stages:
         modelSourceType: manualSpec
         modelName: '$(MODEL_NAME)'
         modelVersion: $(MODEL_VERSION)
-        inferencePath: '$(Build.SourcesDirectory)/code/scoring/inference_config.yml'
+        inferencePath: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring/inference_config.yml'
         deploymentTarget: AKS
         aksCluster: $(AKS_COMPUTE_NAME)
         deploymentName: $(AKS_DEPLOYMENT_NAME)
-        deployConfig: '$(Build.SourcesDirectory)/code/scoring/deployment_config_aks.yml'
+        deployConfig: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring/deployment_config_aks.yml'
         overwriteExistingDeployment: true
     - task: AzureCLI@1
       displayName: 'Smoke test'
