--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ AML_CLUSTER_MAX_NODES = '4'
 AML_CLUSTER_MIN_NODES = '0'
 AML_CLUSTER_PRIORITY = 'lowpriority'
 # Training Config
-MODEL_NAME = 'sklearn_regression_model.pkl'
+MODEL_NAME = 'diabetes_regression_model.pkl'
 MODEL_VERSION = '1'
 TRAIN_SCRIPT_PATH = 'training/train.py'
 # AML Pipeline Config
@@ -30,7 +30,7 @@ TRAINING_PIPELINE_NAME = 'Training Pipeline'
 MODEL_PATH = ''
 EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
 REGISTER_SCRIPT_PATH = 'register/register_model.py'
-SOURCES_DIR_TRAIN = 'code'
+SOURCES_DIR_TRAIN = 'diabetes_regression'
 DATASET_NAME = 'diabetes_ds'
 DATASTORE_NAME = 'datablobstore'
 DATAFILE_NAME = 'diabetes.csv'
