--- a/.pipelines/azdo-pr-build-train.yml
+++ b/.pipelines/azdo-pr-build-train.yml
@@ -11,7 +11,7 @@ container: mcr.microsoft.com/mlops/python:latest
 
 
 variables:
-- template: azdo-variables.yml
+- template: diabetes_regression-variables.yml
 - group: devopsforai-aml-vg
 
 
